<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecieptActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/reciept_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        >

        <ImageButton
            android:id="@+id/reciept_nav"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/menu"
            android:background="@color/design_default_color_on_primary"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/menu"
            />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cherry_swash"
            android:text="Thank You"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="#32746D"
            android:textSize="30sp"
            android:layout_marginStart="10dp"
            />
        <ImageButton
            android:id="@+id/recieptprofilebtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/profile"
            android:background="@null"
            android:layout_marginEnd="10dp"
            android:contentDescription="profile"
            tools:ignore="HardcodedText"
            />


    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/reciept_navbar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="start"
        android:background="#32746D"
        android:visibility="invisible"
        app:menu="@menu/navmenu"
        />
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="126dp"
        android:layout_height="112dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="119dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/reciept"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="87dp"
        android:layout_marginTop="179dp"
        android:fontFamily="@font/lemon"
        android:gravity="center"
        android:text="@string/wati"
        android:textSize="15sp"
        android:textColor="#32746D"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/lemon"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="244dp"
        android:text="@string/please_check_orders_section_to_see_your_order"
        android:textSize="15sp"
        android:textColor="#32746D"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/lemon"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="87dp"
        android:layout_marginTop="346dp"
        android:text="@string/if_you_have_any_queries_fell_free_to_contact_us"
        android:textSize="15sp"
        android:textColor="#32746D"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:fontFamily="@font/lemon"
        android:layout_marginStart="87dp"
        android:layout_marginTop="294dp"
        android:text="@string/don_t_forget_to_give_revies_on_food"
        android:textSize="15sp"
        android:textColor="#32746D"/>
</RelativeLayout>