<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/appname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gafata"
        android:gravity="center"
        android:padding="5dp"
        android:shadowColor="#32746D"
        android:shadowDx="0.0"
        android:shadowDy="0.0"
        android:shadowRadius="8"
        android:text="@string/next_order"
        android:textColor="#32746D"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appname"
        android:fontFamily="@font/gafata"
        android:gravity="center"
        android:padding="5dp"
        android:shadowColor="#32746D"
        android:shadowDx="0.0"
        android:shadowDy="0.0"
        android:shadowRadius="8"
        android:text="@string/create_account"
        android:textColor="#32746D"
        android:textSize="25sp" />

    <ImageView
        android:layout_width="122dp"
        android:layout_height="182dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="253dp"
        android:backgroundTint="#32746D"
        android:src="@drawable/registerimage" />

    <TextView
        android:id="@+id/fullnametextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_alignParentStart="true"
        android:layout_marginStart="54dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/fullname"
        android:textColor="#32746D"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/fullnametxt"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fullnametextview"
        android:layout_alignParentStart="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:background="@drawable/registeroutline" />

    <TextView
        android:id="@+id/usernametextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fullnametxt"
        android:layout_alignParentStart="true"
        android:layout_marginStart="129dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/username"
        android:textColor="#32746D"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/usernametxt"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernametextview"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="129dp"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:background="@drawable/registeroutline" />

    <TextView
        android:id="@+id/emailtextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernametxt"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="159dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/email"
        android:textColor="#32746D"
        android:textSize="18sp" />


    <EditText
        android:id="@+id/emailtxt"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailtextview"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="154dp"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:background="@drawable/registeroutline" />

    <TextView
        android:id="@+id/passwordtextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailtxt"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="129dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/password"
        android:textColor="#32746D"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/passwordtxt"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordtextview"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="129dp"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:background="@drawable/registeroutline" />

    <TextView
        android:id="@+id/confirmpasswordtextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordtxt"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/confirm_password"
        android:textColor="#32746D"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/confirmpasswordtxt"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirmpasswordtextview"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:background="@drawable/registeroutline" />

    <android.widget.Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginStart="150dp"
        android:layout_marginBottom="38dp"
        android:background="@drawable/bgbtn"
        android:fontFamily="@font/roboto_black"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/register_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto_black"
        android:gravity="center"
        android:text="@string/i_m_already_a_user_sign_in"
        android:textColor="#32746D"
        android:textSize="18sp" />

</RelativeLayout>