<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".resetPasswordActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/reset_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cherry_swash"
            android:text="@string/reset"
            android:gravity="center"
            android:textColor="#32746D"
            android:textSize="30sp"
            android:layout_margin="10dp"
            />


    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mailus"
        android:orientation="vertical"
        android:layout_below="@+id/reset_toolbar"
        android:layout_margin="10dp"
        android:padding="10dp"
        >

        <EditText
            android:id="@+id/resettxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="#32746D"
            android:hint="@string/enter_your_email"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="#32746D"
            android:textColorHint="#32746D" />
        <android.widget.Button
            android:id="@+id/resetsend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bgbtn"
            android:text="@string/send"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

</RelativeLayout>