<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#FFF"
tools:context=".BillActivity"
    >

<androidx.appcompat.widget.Toolbar
    android:id="@+id/bill_toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    >

    <ImageButton
        android:id="@+id/bill_nav"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/menu"
        android:background="@color/design_default_color_on_primary"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/menu"
        />

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cherry_swash"
        android:text="@string/bill"
        android:gravity="center"
        android:textColor="#32746D"
        android:textSize="30sp"
        android:layout_marginStart="10dp"
        />
    <ImageButton
        android:id="@+id/billprofilebtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/profile"
        android:background="@null"
        android:layout_marginEnd="10dp"
        android:contentDescription="profile"
        tools:ignore="HardcodedText"
        />


</androidx.appcompat.widget.Toolbar>

<com.google.android.material.navigation.NavigationView
    android:id="@+id/bill_navbar"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_gravity="start"
    android:background="#32746D"
    android:visibility="invisible"
    app:menu="@menu/navmenu"
    />
<LinearLayout
    android:id="@+id/Billlayout"
    android:layout_width="match_parent"
    android:layout_height="450dp"
    android:layout_below="@id/bill_toolbar"
    android:background="@mipmap/billbackground"
    android:orientation="vertical"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="415dp"
        >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/billrecycleview"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_margin="5dp"
        android:paddingTop="50dp"
        android:paddingStart="60dp"
        android:paddingEnd="10dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="1"
        />

    </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    <TextView
        android:id="@+id/Totalprice"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:text="@string/total_price"
        android:textSize="20sp"
        android:textColor="#000"
        android:paddingStart="140dp"
        android:paddingEnd="5dp"
        android:layout_below="@id/billrecycleview"
        />

    <TextView
        android:id="@+id/Totalpricetxt"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:text="RS 100"
        android:textSize="20sp"
        android:textColor="#000"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"

        />
    </LinearLayout>

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal"
    android:layout_below="@+id/Billlayout"
    android:layout_centerInParent="true"
    android:gravity="center"
    >

    <Button
        android:id="@+id/Splitbillbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bgbtn"
        android:fontFamily="@font/roboto_black"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/split_bill"
        android:layout_margin="5dp"
        />
    <Button
        android:id="@+id/paysinglebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/nobgbtn"
        android:fontFamily="@font/roboto_black"
        android:text="@string/pay_single"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_margin="5dp"
        />
</LinearLayout>
</RelativeLayout>