<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">


    <ImageView
        android:layout_width="573dp"
        android:layout_height="451dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-16dp"
        android:layout_marginTop="-217dp"
        android:layout_marginEnd="-18dp"
        android:rotation="50"
        android:src="@mipmap/mainscreen" />

    <TextView
        android:id="@+id/appname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="274dp"
        android:fontFamily="@font/gafata"
        android:gravity="center"
        android:padding="5dp"
        android:shadowColor="#32746D"
        android:shadowDx="0.0"
        android:shadowDy="0.0"
        android:shadowRadius="8"
        android:text="@string/next_order"
        android:textColor="#32746D"
        android:textSize="50sp" />

    <android.widget.Button
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="150dp"
        android:layout_marginBottom="138dp"
        android:background="@drawable/bgbtn"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold" />


    <android.widget.Button
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="150dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/nobgbtn"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="bold" />


</RelativeLayout>